--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/cognitiveservices-computervision": "^8.2.0",
+    "@google-cloud/vision": "^4.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
+    "ms-rest-azure": "^3.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "tesseract.js": "^4.1.2",
+    "tesseract.js-node": "^0.1.0",
+    "uuid": "^9.0.0"
   }
 }
